--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,6 @@ serde = { version = "1.0", features = ["derive"] }
 json = { version = "1.0", package = "serde_json" }
 
 bs58 = "0.4"
+base64 = "0.13"
+zstd = "0.11"
 
