--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ smallvec = "1.8.0"
 
 tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
 tokio-tungstenite = "0.17.1"
+tracing = "0.1"
 
 futures-delay-queue = { version = "0.5.1", default-features = false, features = ["use-tokio"] }
 futures-intrusive = "0.4"
