--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,5 @@ json = { version = "1.0", package = "serde_json" }
 bs58 = "0.4"
 base64 = "0.13"
 zstd = "0.9"
+prometheus = { version = "0.13", default-features = false, features = ["process"] }
 
