--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dashmap = "5.2.0"
+dashmap = "5"
 smallvec = "1.8.0"
 
 tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
@@ -14,9 +14,9 @@ tokio-tungstenite = "0.17.1"
 tracing = "0.1"
 lazy_static = "1.4"
 
-futures-delay-queue = { version = "0.5.1", default-features = false, features = ["use-tokio"] }
-futures-intrusive = "0.4"
-futures-util = "0.3.21"
+futures-delay-queue = { version = "=0.5.1", default-features = false, features = ["use-tokio"] }
+futures-intrusive = "=0.4"
+futures-util = "=0.3.21"
 
 serde = { version = "1.0", features = ["derive"] }
 json = { version = "1.0", package = "serde_json" }
