--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,18 +11,16 @@ smallvec = "1.8.0"
 
 tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
 tokio-tungstenite = "0.17.1"
+futures-util = "0.3" 
 tracing = "0.1"
 lazy_static = "1.4"
-
-futures-delay-queue = { version = "=0.5.1", default-features = false, features = ["use-tokio"] }
-futures-intrusive = "=0.4"
-futures-util = "=0.3.21"
 
 serde = { version = "1.0", features = ["derive"] }
 json = { version = "1.0", package = "serde_json" }
 
 bs58 = "0.4"
 base64 = "0.13"
-zstd = "0.9"
+zstd = "0.11"
 prometheus = { version = "0.13", default-features = false, features = ["process"] }
+lru = "0.7.5"
 
